--- a/mustang_app/pubspec.yaml
+++ b/mustang_app/pubspec.yaml
@@ -17,9 +17,15 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
+
+  cloud_firestore:
+  firebase_auth:
+  firebase_core:
+  firebase_database:
+  table_calendar:
+
   flutter:
     sdk: flutter
-  table_calendar: ^2.2.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
