--- a/mustang_app/pubspec.yaml
+++ b/mustang_app/pubspec.yaml
@@ -36,6 +36,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+#For changing app icon
 flutter_icons:
   android: "launcher_icon"
   ios: true
