--- a/mustang_app/ios/Runner/Info.plist
+++ b/mustang_app/ios/Runner/Info.plist
@@ -41,5 +41,18 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>CFBundleURLTypes</key>
+	<array>
+	<dict>
+		<key>CFBundleTypeRole</key>
+		<string>Editor</string>
+		<key>CFBundleURLSchemes</key>
+		<array>
+			<!-- TODO Replace this value: -->
+			<!-- Copied from GoogleService-Info.plist key REVERSED_CLIENT_ID -->
+			<string>com.googleusercontent.apps.929165800752-qaainojmk89tenlukd9i692g67i8cljr</string>
+		</array>
+	</dict>
+</array>
 </dict>
 </plist>
